# tomorrows

./: Cargo.toml  Dioxus.toml  digest.txt
assets/: tailwind.css
database/: sqlite.db  sqlite.db-shm  sqlite.db-wal
src/: main.rs
src/core/: api.rs  constant.rs  database.rs  entity.rs  file_system.rs  mod.rs
src/interface/: application.rs  icon.rs  mod.rs  screen.rs
