[package]
name = "tomorrows"
version = "0.1.0"
authors = ["tiso <p9648213750912@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "6.1.0", optional = true }
dioxus = { version = "0.7.3", features = ["fullstack"] }
r2d2 = { version = "0.8.10", optional = true }
r2d2_sqlite = { version = "0.32.0", features = ["bundled"], optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
tokio = { version = "1.49.0", features = ["full"], optional = true }
uuid = { version = "1.21.0", features = ["v4"], optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "dep:serde"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:r2d2", "dep:r2d2_sqlite", "dep:tokio", "dep:serde", "dep:dashmap", "dep:uuid"]

[unstable]
build-std = ["std", "panic_abort", "core", "alloc"]
build-std-features = ["panic_immediate_abort"]

[build]
rustflags = [
    "-Clto",
    "-Zvirtual-function-elimination",
    "-Zlocation-detail=none"
]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
incremental = false
strip = "debuginfo"
